# jojogan-zombie

./: .gitignore  AUTHORS.rst  Dockerfile  Dockerfile_base  Jenkinsfile  LICENSE  Makefile  README.md  locustfile.py  pyproject.toml  requirements copy.txt  requirements.txt
ansible/: create_gke.yaml  inventory
ansible/deploy_elk/: create_gce_elk.yaml  install_docker.yaml
ansible/deploy_jenkins/: create_compute_instance.yaml  deploy_jenkins.yaml
app/: main.py
helm/: values.yaml
helm/cadvisor/: cadvisor-daemonset.yaml  cadvisor-service.yaml
helm/jojogan-zombie/: Chart.yaml  service.yaml
helm/jojogan-zombie/templates/: service-api.yaml  service-metric.yaml  service.yaml
infra/ansible/: create_gke.yaml  inventory
infra/ansible/deploy_elk/: create_gce_elk.yaml
infra/ansible/deploy_jenkins/: create_compute_instance.yaml  deploy_jenkins.yaml
jenkins-docker-compose/: docker-compose.yml
mlflow-docker-compose/: docker-compose.yml
mlflow-docker-compose/mlflow/: Dockerfile
models/inversion_codes/: zombie.pt
monitoring/: pyproject.toml
monitoring/cloud/prom-graf-docker-compose/prometheus/config/: prometheus.yml
notebooks/: cuda  experiments.ipynb
prom-graf-docker-compose/: prom-graf-docker-compose.yaml
prom-graf-docker-compose/alertmanager/: config.yml
prom-graf-docker-compose/grafana/config/: grafana.ini
prom-graf-docker-compose/prometheus/config/: alert-rules.yml  prometheus.yml
src/: Dockerfile  Makefile  pyproject.toml
src/ansible/deploy_elk/: create_gce_elk.yaml
src/helm/jojogan-zombie/: values.yaml
src/jojogan_zombie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/notebooks/: apply.ipynb
src/notebooks/mlruns/0/: meta.yaml
src/prom-graf-docker-compose/grafana/config/: dashboards.yaml
terraform/: main.tf  variables.tf
test/: test_main.py
tests/: locust_results_stats.csv  locust_results_stats_history.csv  locustfile.py  test_main.py
utils/: e4e_projection.py  model.py  util.py
utils/e4e/models/: psp.py
utils/e4e/models/encoders/: psp_encoders.py
utils/e4e/models/stylegan2/: model.py
